--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/img_bacrount/logo.ch.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kontrol</title>
+    <title>schetchik</title>
     <link href='https://fonts.googleapis.com/css?family=Inter' rel='stylesheet'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
